syntax = "proto2";

package com.scalableminds.webknossos.tracingstore;

import "geometry.proto";

message Node {
    required int32 id = 1;
    required Point3D position = 2;
    required Vector3D rotation = 3;
    required float radius = 4;
    required int32 viewport = 5;
    required int32 resolution = 6;
    required int32 bitDepth = 7;
    required bool interpolation = 8;
    required int64 createdTimestamp = 9;
}

message Edge {
  required int32 source = 1;
  required int32 target = 2;
}

message Comment {
    required int32 nodeId = 1;
    required string content = 2;
}

message BranchPoint {
    required int32 nodeId = 1;
    required int64 createdTimestamp = 2;
}

message Tree {
     required int32 treeId = 1;
     repeated Node nodes = 2;
     repeated Edge edges = 3;
     optional Color color = 4;
     repeated BranchPoint branchPoints = 5;
     repeated Comment comments = 6;
     required string name = 7;
     required int64 createdTimestamp = 8;
     optional int32 groupId = 9;
     optional bool isVisible = 10; // in this case `None` means `true`
}

message TreeGroup {
  required string name = 1;
  required int32 groupId = 2;
  repeated TreeGroup children = 3;
}

message SkeletonTracing {
    required string dataSetName = 1;
    repeated Tree trees = 2;
    required int64 createdTimestamp = 3;
    optional BoundingBox boundingBox = 4;
    optional int32 activeNodeId = 5;
    required Point3D editPosition = 6;
    required Vector3D editRotation = 7;
    required double zoomLevel = 8;
    required int64 version = 9;
    optional BoundingBox userBoundingBox = 10;
    repeated TreeGroup treeGroups = 11;
    repeated NamedBoundingBox userBoundingBoxes = 12;
}

message SkeletonTracingOpt {
    optional SkeletonTracing tracing = 1;
}

message SkeletonTracings {
    repeated SkeletonTracingOpt tracings = 1;
}
